--- a/nginx-lb/Dockerfile
+++ b/nginx-lb/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx
 USER root
-MAINTAINER student19
+MAINTAINER Pargat Singh
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
