--- a/siteb/Dockerfile
+++ b/siteb/Dockerfile
@@ -1,6 +1,6 @@
 FROM registry.access.redhat.com/rhscl/httpd-24-rhel7
 USER root
-MAINTAINER student19
+MAINTAINER Pargat Singh
 ADD ./etc/httpd/conf/httpd.conf /etc/httpd/conf
 ADD ./var/www/html/index.html /var/www/html/
 RUN chown -R apache:apache /var/www/html
